fix url repo github

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <a
-      href="https://recoil-game-of-thrones.netlify.app/"
+      href="https://github.com/zyhou/recoil-games-of-thrones"
       class="github-corner"
       aria-label="View source on GitHub"
       ><svg
